fix .visible mobile

--- a/source/sass/blocks/countdown.scss
+++ b/source/sass/blocks/countdown.scss
@@ -112,6 +112,10 @@ input::-webkit-outer-spin-button {
   background-color: $gray-light-1;
   border-radius: 5px;
   border: solid 2px $gray-basic;
+
+  @media (max-width: $mobile-width) {
+    width: 300px;
+  }
 }
 
 .hidden {
